cluster/metallb-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: metallb-system
  annotations:
    argocd.argoproj.io/sync-options: Prune=false,Delete=false
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
