cluster/public-route-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apps
  labels:
    gateway.api-api-api.com/public: "true"
  annotations:
    argocd.argoproj.io/sync-options: Prune=false,Delete=false
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    gateway.api-api-api.com/public: "true"
  annotations:
    argocd.argoproj.io/sync-options: Prune=false,Delete=false
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    gateway.api-api-api.com/public: "true"
  annotations:
    argocd.argoproj.io/sync-options: Prune=false,Delete=false
---
apiVersion: v1
kind: Namespace
metadata:
  name: networking
  labels:
    gateway.api-api-api.com/public: "true"
  annotations:
    argocd.argoproj.io/sync-options: Prune=false,Delete=false
