cluster/ci-vault-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-ci
  namespace: vault-system
spec:
  parentRefs:
    - name: internal
      namespace: networking
      sectionName: https
  hostnames:
    - vault.internal.api-api-api.com
  rules:
    - backendRefs:
        - name: vault
          port: 8200
